trunk/src/java/org/proctosequel/antlr/LogicExprGrammarParser.java
// Generated from src/conf/LogicExprGrammar.g4 by ANTLR 4.1
package org.proctosequel.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LogicExprGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, VarName=5, ParamName=6, Word=7, PUNCT=8, 
		OP_ASSIGN=9, OP_EQ=10, COMMA=11, GREATER=12, LOWER=13, PLUS_OP=14, MINUS_OP=15, 
		MULTIPLY_OP=16, DIVIDE_OP=17, SEMICOLON=18, STRING=19, MULTIPLE_LINE_COMMENT_BLOCK=20, 
		ONE_LINE_COMMENT_BLOCK=21, NEW_LINE=22, WS=23;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "'and'", "'or'", "'('", "VarName", "ParamName", "Word", 
		"PUNCT", "':='", "'='", "','", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", 
		"';'", "STRING", "MULTIPLE_LINE_COMMENT_BLOCK", "ONE_LINE_COMMENT_BLOCK", 
		"NEW_LINE", "WS"
	};
	public static final int
		RULE_condition = 0, RULE_subCond = 1, RULE_expr = 2;
	public static final String[] ruleNames = {
		"condition", "subCond", "expr"
	};

	@Override
	public String getGrammarFileName() { return "LogicExprGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public LogicExprGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConditionContext extends ParserRuleContext {
		public List<SubCondContext> subCond() {
			return getRuleContexts(SubCondContext.class);
		}
		public TerminalNode EOF() { return getToken(LogicExprGrammarParser.EOF, 0); }
		public SubCondContext subCond(int i) {
			return getRuleContext(SubCondContext.class,i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprGrammarVisitor ) return ((LogicExprGrammarVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(6); subCond(0);
				}
				}
				setState(9); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << VarName) | (1L << ParamName) | (1L << Word) | (1L << STRING))) != 0) );
			setState(11); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubCondContext extends ParserRuleContext {
		public int _p;
		public List<SubCondContext> subCond() {
			return getRuleContexts(SubCondContext.class);
		}
		public SubCondContext subCond(int i) {
			return getRuleContext(SubCondContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SubCondContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SubCondContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_subCond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).enterSubCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).exitSubCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprGrammarVisitor ) return ((LogicExprGrammarVisitor<? extends T>)visitor).visitSubCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubCondContext subCond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SubCondContext _localctx = new SubCondContext(_ctx, _parentState, _p);
		SubCondContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, RULE_subCond);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(14); expr();
				}
				break;

			case 2:
				{
				setState(15); expr();
				setState(16);
				_la = _input.LA(1);
				if ( !(_la==2 || _la==3) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(17); expr();
				}
				break;

			case 3:
				{
				setState(19); match(4);
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(20); subCond(0);
					}
					}
					setState(23); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << VarName) | (1L << ParamName) | (1L << Word) | (1L << STRING))) != 0) );
				setState(25); match(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(34);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new SubCondContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_subCond);
					setState(29);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(30);
					_la = _input.LA(1);
					if ( !(_la==2 || _la==3) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(31); subCond(3);
					}
					} 
				}
				setState(36);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<TerminalNode> ParamName() { return getTokens(LogicExprGrammarParser.ParamName); }
		public TerminalNode STRING(int i) {
			return getToken(LogicExprGrammarParser.STRING, i);
		}
		public TerminalNode ParamName(int i) {
			return getToken(LogicExprGrammarParser.ParamName, i);
		}
		public TerminalNode PUNCT(int i) {
			return getToken(LogicExprGrammarParser.PUNCT, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> PUNCT() { return getTokens(LogicExprGrammarParser.PUNCT); }
		public TerminalNode Word(int i) {
			return getToken(LogicExprGrammarParser.Word, i);
		}
		public List<TerminalNode> VarName() { return getTokens(LogicExprGrammarParser.VarName); }
		public List<TerminalNode> Word() { return getTokens(LogicExprGrammarParser.Word); }
		public List<TerminalNode> STRING() { return getTokens(LogicExprGrammarParser.STRING); }
		public TerminalNode VarName(int i) {
			return getToken(LogicExprGrammarParser.VarName, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprGrammarListener ) ((LogicExprGrammarListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprGrammarVisitor ) return ((LogicExprGrammarVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			switch (_input.LA(1)) {
			case Word:
				{
				setState(37); match(Word);
				}
				break;
			case VarName:
				{
				setState(38); match(VarName);
				}
				break;
			case ParamName:
				{
				setState(39); match(ParamName);
				}
				break;
			case STRING:
				{
				setState(40); match(STRING);
				}
				break;
			case 4:
				{
				setState(41); match(4);
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(42); expr();
					}
					}
					setState(45); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << VarName) | (1L << ParamName) | (1L << Word) | (1L << STRING))) != 0) );
				setState(47); match(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(52);
					_la = _input.LA(1);
					if (_la==PUNCT) {
						{
						setState(51); match(PUNCT);
						}
					}

					setState(66);
					switch (_input.LA(1)) {
					case Word:
						{
						setState(54); match(Word);
						}
						break;
					case VarName:
						{
						setState(55); match(VarName);
						}
						break;
					case ParamName:
						{
						setState(56); match(ParamName);
						}
						break;
					case STRING:
						{
						setState(57); match(STRING);
						}
						break;
					case 4:
						{
						setState(58); match(4);
						setState(60); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(59); expr();
							}
							}
							setState(62); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << VarName) | (1L << ParamName) | (1L << Word) | (1L << STRING))) != 0) );
						setState(64); match(1);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1: return subCond_sempred((SubCondContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean subCond_sempred(SubCondContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return 2 >= _localctx._p;
		}
		return true;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}